<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share that Bill</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">login</string>
    <string name="create_new_account">create new account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>

    <!-- create group fragment -->
    <string name="title_activity_activity_create_group">ActivityCreateGroup</string>
    <string name="bundle_first_group_create">BundleFirstGroup</string>
    <string name="group_name">group name</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="create_first_group">CREATE FIRST GROUP</string>
    <string name="invited_members">INVITED MEMBERS</string>
    <string name="add_member">Add member</string>
    <string name="cant_create_group">Can\'t Create Group</string>
    <string name="group_name_invalid">Group name must be valid.</string>
    <string name="edit_member">Edit Member</string>
    <string name="enter_new_email">Enter member\'s new email</string>
    <string name="group_already_exists">Group name already exists.</string>
    <string name="failed_to_create_group">Failed to create group.</string>
    <string name="email_cant_be_empty">Email can\'t be empty.</string>
    <string name="you_dont_add_you">You don\'t have to add yourself.</string>
    <string name="email_already_added">User\'s email already added.</string>
    <string name="email_not_found">User\'s email \"%s\" couldn\'t be found.</string>
    <string name="email_must_be_single">Email must be single line.</string>

    <!-- create new bill fragment -->
    <string name="title_activity_activity_new_bill">ActivityNewBill</string>
    <string name="click_set_date">CLICK TO SET DATE</string>
    <string name="select_date">Select Date</string>
    <string name="new_bill">NEW BILL</string>
    <string name="who_paid">WHO PAID</string>
    <string name="highlight_you">(You)</string>
    <string name="edit_value_paid">Edit Value Paid</string>
    <string name="enter_value_paid_by">Enter value paid by</string>
    <string name="split_options">SPLIT OPTIONS</string>
    <string name="split_method">Splitting Method:</string>
    <string name="total">Total</string>
    <string name="bill_values_mismatch">Total amount paid can\'t differ from amount split.</string>
    <string name="bill_paid_value_zero">Total amount paid can\'t be zero.</string>
    bill_paid_value_zero
    <string name="bill_name_empty">Bill name can\'t be empty.</string>
    <string name="bill_name_hint">bill name</string>
    <string name="done">DONE</string>
    <string name="bill_creation_failed">Failed to create bill</string>
    <string name="bill_creation_failed_message">The bill couldn\'t be created.</string>
    <string-array name="split_method_options">
        <item>Define Values</item>
        <item>Split Equally</item>
    </string-array>

    <string name="title_activity_activity_bill_details">ActivityBillDetails</string>
    <string name="delete_bill">Delete bill</string>
    <string name="delete_bill_sure">Are you sure you want to delete the bill</string>
    <string name="bill">Bill</string>
    <string name="was_deleted">was deleted</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="did_not_participate">did not participate</string>
    <string name="paid">paid</string>
    <string name="and">and</string>
    <string name="owes">owes</string>
    <string name="ok">OK</string>
    <string name="you">You</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_message">Username or password incorrect</string>
    <string name="bills">bills</string>
    <string name="users">users</string>
    <string name="notifications">notifications</string>
    <string name="recent_activity">recent activity</string>
    <string name="members">members</string>
    <string name="add_new_bill">Add new bill</string>
    <string name="add_new_member">Add new member</string>

    <string name="my_groups">My groups:</string>

    <string name="bundle_user_name">user_name</string>
    <string name="bundle_group_name">group_name</string>
    <string name="bundle_bill_name">bill_name</string>

    <string name="you_lent">You lent</string>
    <string name="you_borrowed">You borrowed</string>
    <string name="not_involved">Not involved</string>

    <string name="lent_in_total">Lent in total</string>
    <string name="borrowed_in_total">Borrowed in total</string>

    <string name="error">Error</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="did_not_complete_all_fields">You did not complete all fields</string>

    <string name="invalid_email">Invalid email</string>
    <string name="invalid_email_text">The typed email is invalid</string>

    <string name="passwords_dont_match">The passwords do not match</string>

    <string name="created_the_bill">created the bill</string>
    <string name="edited_the_bill">edited the bill</string>
    <string name="deleted_the_bill">deleted the bill</string>
    <string name="added">added</string>
    <string name="to_the_group">to the group</string>

    <string name="less_than_one_minute_ago">Less than one minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="weeks_ago">weeks ago</string>

    <string name="create_new_group">Create new group</string>

    <string name="no_bills">This group does not have any bills yet</string>
    <string name="no_notifications">No recent updates</string>

    <string name="drawer_opened">drawer opened</string>
    <string name="drawer_closed">drawer closed</string>

    <string name="loading">Loading</string>

    <string name="enter_member_email">Enter member email</string>
    <string name="user_added_to_group">User added successfully to group</string>
    <string name="not_possible_add_user">It was not possible to add the user to the group</string>
    <string name="user_already_on_group">The user you are trying to add is already on the group</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_view_group">ActivityViewGroup</string>

</resources>
