<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.almasosorio.sharethatbill.FragmentLogin"
    >

    <TextView
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHARE THAT BILL"
        android:textColor="#DFDFE0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        />

    <View
        android:layout_below="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_gravity="center_vertical"
        android:background="#DFDFE0"
        android:layout_centerHorizontal="true"
        android:id="@+id/dash"
        />

    <EditText
        android:id="@+id/email"
        android:layout_below="@id/dash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginTop="100sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:textSize="20sp"
        android:hint="@string/email"
        android:gravity="center_horizontal"
        android:inputType="textWebEmailAddress"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:textSize="20sp"
        android:hint="@string/password"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_backgnd"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginTop="100sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:textColor="#DFDFE0"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_create_account"
        />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_backgnd"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="30sp"
        android:textColor="#DFDFE0"
        android:text="@string/create_new_account"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
